# vbj

./: CMakeLists.txt  main.cpp  project.config
src/: CMakeLists.txt  main.cxx
src/headers/: verbaj.h
src/headers/os_specific/: linux_headers.h  mac_headers.h  windows_headers.h
src/headers/startup/: startup.h
src/headers/tools/: nomoveorcopy.h
src/headers/types/: types.h
src/jit/: CMakeLists.txt  jit.h
src/jit/architectures/intel/: CMakeLists.txt
src/jit/architectures/intel/memory/: CMakeLists.txt  IntelJitBufferWriter_x64.cxx  IntelJitBufferWriter_x64.h
src/jit/architectures/intel/memory/IntelJitBufferWriter_x64/: IntelJitBufferWriter_x64.cxx  IntelJitBufferWriter_x64.h
src/jit/architectures/intel/opcodes/: CMakeLists.txt
src/jit/architectures/intel/opcodes/IntelOpCodeBase_x64/: IntelOpcodeBase_x64.h
src/jit/general/memory/: CMakeLists.txt
src/jit/general/memory/JitBufferWriterBase/: JitBufferWriterBase.cxx  JitBufferWriterBase.h
src/jit/general/memory/MemoryEndianness/: MemoryEndianness.h
src/jit/general/memory/writer/: JitBufferWriterBase.cxx  JitBufferWriterBase.h
src/jit/general/opcodes/: OpCodeBase.h
src/jit/memory/writer/: JitBufferWriter.cxx  JitBufferWriter.h
src/lit/: lit.h
src/lit/opcodes/: VerbatimOpCodeBinaryValue.h  VerbatimOpCodes.h
src/lit/parsing/LitFileInStream/: LitFileInStream.cpp  LitFileInStream.cxx  LitFileInStream.h
src/lit/parsing/readers/ints/: LitFileInt.h
src/lit/parsing/sections/LitFileHeader/: LitFileHeader.cxx  LitFileHeader.h
src/runtime/: runtime.h
src/runtime/stringtable/: StringTable.cxx  StringTable.h
src/startup/: Startup.cxx  Startup.h  main.cxx  startup.cxx
(+8 files in other folders)
